# buddy

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CONVENTIONS.md  Dockerfile  Dockerfile.agent-runtime  LICENSE  Makefile  README.md  README_A2A_AGENT.md  TODO.md  c_test.py  cli_.py  main.py  mkdocs.yml  openapi-ts.config.ts  pyproject.toml  run_a2a_example.py  run_integrated_example.py  test_a2a_agent.py  test_integration.py
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
app/: .gitignore  AGENTS.md  README.md  app.config.ts  package.json
app/scripts/: fix-dependency-sourcemaps.mjs
app/src/: app.css  app.tsx  entry-client.tsx  global.d.ts
app/src/a2a/: client.ts  externalAgents.ts  http.ts  managedAgents.ts  schemas.ts
app/src/components/: AIMessage.tsx  AgentCard.tsx  Chat.tsx  Container.tsx  HumanMessage.tsx  InputBox.tsx  MarkdownContent.tsx  MessageBox.tsx  PromptSuggestions.tsx  ScrollToBottomButton.tsx  Sidebar.tsx  TaskTabs.tsx  ThinkingMessage.tsx  ToolCallMessage.tsx  ToolMessage.tsx  TopTabs.tsx  WorkingIndicator.tsx
app/src/components/managed-agents/: ExternalAgentsSection.tsx  FeedbackAlert.tsx  ManagedAgentCreateSection.tsx  ManagedAgentsSection.tsx  ManagedConfigFields.tsx  ToastViewport.tsx  runtimeConfig.ts  types.ts  useExternalAgentsAdmin.ts  useManagedAgentsAdmin.ts
app/src/components/tool-calls/: DefaultToolCallRenderer.tsx  ExpandableTextBlock.tsx  TodoToolCallRenderer.tsx  ToolCallCardBase.tsx  WebSearchToolCallRenderer.tsx  format.ts  registry.ts  types.ts
app/src/components/ui/: Skeleton.tsx
app/src/context/: AgentsContext.tsx  ChatContext.tsx  chatEvents.ts  chatState.ts
app/src/data/: sampleMessages.ts
app/src/routes/: agent-logs.tsx  index.tsx  managed-agents.tsx
buddy/: config.py  edges.py  exp.py  graph.py  log.py  main.py  main_raw.py  model.py  nodes.py  state.py  tools.py  utils.py  web_search.py
buddy/agents/: researcher.py
buddy/cli/: interface.py  present.py  utils.py
buddy/llm/: llm.py
buddy/tools/: planner.py  template.py  web_search.py
compose/: compose.openwebui.yaml
docs/: a2a-architecture.md  agent-container-architecture.md  context.md  idea.md  index.md  modules.md  plan.md  server.md  todo.md  tui.md
exp/: context.py  draw.py  draw2.py  getg.py  litetool.py  llm.py  stream.py  test_model.py
searxng/: compose.yaml
searxng/config/: settings.yml
src/buddy/: __init__.py  cli.py  client.py  data_dirs.py  edges.py  graph.py  log.py  main.py  model.py  nodes.py  session_store.py  state.py  utils.py
src/buddy/a2a/: __init__.py  a2a_adapter.py  basic_client.py  basic_server.py  event_writer.py  events.py  executor.py  external_agents.py  managed_agents.py  protocol.py  routes_agents.py  routes_proxy.py  routes_runtime.py  routes_sessions.py  runtime_server.py  server.py  server_raw.py  server_state.py  streaming_client.py  utils.py  validation.py
src/buddy/a2a_agent/: __init__.py  a2a_adapter.py  agent.py  config.py  example_server.py  example_tools.py  integrated_agent.py  integrated_example.py  tool_bridge.py
src/buddy/agent/: __init__.py  agent.py  config.py  deps.py  example_server.py  example_tools.py  integrated_agent.py  integrated_example.py  interfaces.py  loop.py  tool_bridge.py
src/buddy/agents/: researcher.py
src/buddy/cli/: __init__.py  client.py  formatting.py
src/buddy/control_plane/: managed_agents.py  routes_agents.py  routes_proxy.py  routes_runtime.py  routes_sessions.py  server.py  server_state.py  validation.py
src/buddy/environment/: manager.py  runtime.py  runtime_api.py
src/buddy/examples/: README.md  basic_agent.py  environ.py  export_langfuse_traces.py  instrument.py  instrument_simple.py  spotify.py  spotify_agent.py  web_agent.py
src/buddy/exp/: model_params.py
src/buddy/interface/: cli.py
src/buddy/llm/: __init__.py  context.py  llm.py  llm_client.py  utils.py
src/buddy/models/: __init__.py  openai_codex.py
src/buddy/runtime/: agent.py  deps.py  main.py
src/buddy/runtime/a2a/: server.py  utils.py
src/buddy/runtime/models/: __init__.py
src/buddy/runtime/tools/: personal_info.py  tool.py
src/buddy/shared/: runtime_config.py
src/buddy/state/: agent_state.py
src/buddy/tools/: __init__.py  calculator.py  environment.py  personal_info.py  todo.py  todo_store.py  todoadd.py  tododelete.py  todoread.py  todoupdate.py  todowrite.py  tool.py  ts_executor.py  web_search.py
src/buddy/tools/environment/docker/: Dockerfile
src/buddy/tools/mcp/: spotify.py
src/buddy/utils/: auth.py
tests/: test_a2a_validation.py  test_control_plane_logging.py  test_control_plane_startup.py  test_environment_cleanup.py  test_environment_paths.py  test_event_writer.py  test_foo.py  test_llm.py  test_managed_agent_config_lifecycle.py  test_managed_agent_create_lifecycle.py  test_proxy_card_rewrite.py  test_runtime_communicate_tool.py  test_runtime_config.py  test_runtime_executor_cancellation.py  test_server_security_policy.py
tests/test_tools/: test_tool.py
tui/: AGENTS.md  README.md  package.json
tui/src/: app.tsx  index.tsx
tui/src/app/: App.tsx  Root.tsx  useChatInput.ts  useCommandPicker.ts  useStreamingMessage.ts
tui/src/components/: ChatPanel.tsx  SessionPicker.tsx  StatusPanel.tsx  chat-panel.tsx  status-panel.tsx
tui/src/contexts/: ChatContext.tsx  ConnectionContext.tsx  SessionContext.tsx
tui/src/lib/: a2a-client.ts  commands.ts  server-status.ts
tui/src/providers/: AppProviders.tsx
tui_new/: AGENTS.md  README.md
tui_new/src/: app.tsx  index.tsx
tui_new/src/components/: chat.tsx  container.tsx  input.tsx  sidebar.tsx
