[project]
name = "buddy"
version = "0.1.0"
description = "An autonomous LLM agent with comprehensive system tools"
authors = [
    {name = "Sebastian Hirt", email = "sebastian@hirts.de"},
]

requires-python = ">=3.13"

dependencies = [
    "rich>=10.0.0",
    "requests>=2.31.0",
    "pytest>=7.0.0",
    "python-dotenv>=1.0.1",
    "litellm>=1.70.0",
    "openai>=1.68.2",
    "langgraph>=0.4.8",
    # "langgraph==0.3.31",
    "matplotlib>=3.10.3",
    "a2a-cli>=0.1.12",
    "a2a-sdk>=0.2.8",
    "uvicorn>=0.34.3",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.13",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
venv = ".venv"
venvPath = "."

[tool.hatch.build.targets.wheel]
packages = ["buddy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 88
target-version = "py313"
lint.select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "ANN", # Type annotations
]
lint.ignore = [
    "E501",  # Line too long (handled by formatter)
    "D100", # Top of module missing docstring
    "D101",
    "D103",
    "D213",
    "D203",
    "D107", # docstring in init
    "D417"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

