[project]
name = "buddy"
version = "0.0.1"
description = "An autonomous LLM agent with comprehensive system tools"
authors = [{ name = "Sebastian Hirt", email = "sebastian@hirts.de" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.13"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "rich>=10.0.0",
    "requests>=2.31.0",
    "pytest>=7.0.0",
    "python-dotenv>=1.0.1",
    "litellm>=1.70.0",
    "openai>=1.68.2",
    "langgraph>=0.4.8",
    # "langgraph==0.3.31",
    "matplotlib>=3.10.3",
    "a2a-cli>=0.1.12",
    "a2a-sdk>=0.2.8",
    "uvicorn>=0.34.3",
    "pydantic-ai[mcp]>=0.0.18",
    "spotipy>=2.25.1",
    "fastmcp>=2.11.2",
    "fasta2a>=0.5.0",
    "python-a2a>=0.5.9",
    "pydantic-ai-slim[ag-ui]>=0.6.2",
]

[project.urls]
Homepage = "https://mokronos.github.io/buddy/"
Repository = "https://github.com/mokronos/buddy"
Documentation = "https://mokronos.github.io/buddy/"

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "tox-uv>=1.11.3",
    "deptry>=0.23.0",
    "mypy>=0.991",
    "pytest-cov>=4.0.0",
    "ruff>=0.11.5",
    "mkdocs>=1.4.2",
    "mkdocs-material>=8.5.10",
    "mkdocstrings[python]>=0.26.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/buddy"]

[tool.pyright]
venv = ".venv"
venvPath = "."

[tool.mypy]
files = ["src"]
disallow_untyped_defs = true
explicit_package_bases = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    # "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    # RedefinedConstant
    "F811",
    # LongExceptions
    "TRY003",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["src"]
